# hpc-openmp

./: CMakeLists.txt
lab3/: README.md  task1.cpp  task2.cpp
